# HeroesTrainingCalculator

./: Dockerfile  README.md  discord_endpoint.py  main.py  pyproject.toml  requirements.txt
src/heroes_training_calculator/: calculate.py  config.py  consts.py  counterstrike_level.py  get_best_configuration.py  get_best_units2buy.py  get_valid_training_configurations.py  sort_configurations.py  tier.py  training_configuration.py  unit.py
